--- a/app/components/views/DexPage/CreateWalletsPage/CreateWalletsPage.module.css
+++ b/app/components/views/DexPage/CreateWalletsPage/CreateWalletsPage.module.css
@@ -1,4 +1,4 @@
 .walletNameInput {
-  width: 90%;
+  width: 90% !important;
   max-width: 650px;
 }
